--- a/grupo3/package.json
+++ b/grupo3/package.json
@@ -9,7 +9,14 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@popperjs/core": "2.10.2",
+    "axios": "^0.25.0",
+    "bootstrap": "5.1.3",
+    "null": "2.0.0",
+    "react-bootstrap": "2.1.0",
+    "react-router-dom": "5.3.0",
+    "react-uuid": "1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
