--- a/grupo3/package.json
+++ b/grupo3/package.json
@@ -3,20 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.17",
+    "@popperjs/core": "2.10.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "@popperjs/core": "2.10.2",
     "axios": "^0.25.0",
     "bootstrap": "5.1.3",
     "null": "2.0.0",
+    "react": "^17.0.2",
     "react-bootstrap": "2.1.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "5.3.0",
-    "react-uuid": "1.0.2"
+    "react-scripts": "5.0.0",
+    "react-uuid": "1.0.2",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
